Fix dark mode colors

--- a/Sources/chrome/navbar.css
+++ b/Sources/chrome/navbar.css
@@ -13,7 +13,8 @@
 }
 
 #navigator-toolbox:not([inFullscreen]) {
-	background-color: transparent !important;
+	/* Not fully transparent value fixes url highlight color in dark mode */
+	background-color: rgba(0, 0, 0, 0.01) !important;
 }
 
 #navigator-toolbox[inFullscreen] {
